Оновлення секції переваг послуг: додано новий слайдер з описом переваг, оновлено стилі та інтегровано нові функціональні можливості для покращення взаємодії з користувачем.

--- a/pages/service.html
+++ b/pages/service.html
@@ -53,17 +53,110 @@
           </div>
         </section>
 
-        <section class="benefits-slider">
-          <div class="benefits-slider__container container-base">
-            <div class="benefits-slider__header">
-              <h2 class="benefits-slider__header-title">Benefits of Hiring Senior Care Services</h2>
-              <div class="benefits-slider__header-content">
+        <section class="service-benefits">
+          <div class="service-benefits__container ">
+            <div class="service-benefits__header">
+              <h2 class="service-benefits__header-title">Benefits of Hiring Senior Care Services</h2>
+              <div class="service-benefits__header-text">
                 <p>
                   Hiring the right support for your loved one is a significant decision. At Caring With Integrity Home
                   Care, we want to create a positive impact through our solutions.
                 </p>
-                <p>Discover the many ways our senior care solutions provide tangible benefits and peace of mind:</p>
+                <p>Discover the many ways our senior care solutions provide tangible benefits <br> and peace of mind:</p>
               </div>
+            </div>
+            <div class="service-benefits__slider swiper-slider" id="service-benefits-slider">
+              <div class="service-benefits__slider-wrapper swiper-wrapper">
+                <div class="service-benefits__slider-item service-benefits-slide swiper-slide">
+                  <h3 class="service-benefits-slide__title">Personalized Care Tailored to Individual Needs</h3>
+                  <p class="service-benefits-slide__text">
+                    We thoughtfully customize our care plans to ensure every service, whether meal preparation,
+                    companionship, or mobility support, is designed for each client. Our personal touch allows your
+                    loved one to maintain their dignity and independence at home.
+                  </p>
+                </div>
+                <div class="service-benefits__slider-item service-benefits-slide swiper-slide">
+                  <h3 class="service-benefits-slide__title">Enhanced Safety and Peace of Mind</h3>
+                  <p class="service-benefits-slide__text">
+                    Safety is a top concern for families. Our caregivers can assist with everyday activities that may
+                    pose a risk, such as bathing or moving around the house. With us by your side, you can have peace of
+                    mind knowing your loved one is in safe hands.
+                  </p>
+                </div>
+                <div class="service-benefits__slider-item service-benefits-slide swiper-slide">
+                  <h3 class="service-benefits-slide__title">Reliable Support for Daily Living</h3>
+                  <p class="service-benefits-slide__text">
+                    Daily tasks like housekeeping, meal prep, and errands may be too much for some seniors. Our reliable
+                    caregivers step in to manage these responsibilities to give seniors the freedom to enjoy their
+                    favorite pastimes and more precious time with family.
+                  </p>
+                </div>
+                <div class="service-benefits__slider-item service-benefits-slide swiper-slide">
+                  <h3 class="service-benefits-slide__title">Enhanced Safety and Peace of Mind</h3>
+                  <p class="service-benefits-slide__text">
+                    Safety is a top concern for families. Our caregivers can assist with everyday activities that may
+                    pose a risk, such as bathing or moving around the house. With us by your side, you can have peace of
+                    mind knowing your loved one is in safe hands.
+                  </p>
+                </div>
+                <div class="service-benefits__slider-item service-benefits-slide swiper-slide">
+                  <h3 class="service-benefits-slide__title">Enhanced Safety and Peace of Mind</h3>
+                  <p class="service-benefits-slide__text">
+                    Safety is a top concern for families. Our caregivers can assist with everyday activities that may
+                    pose a risk, such as bathing or moving around the house. With us by your side, you can have peace of
+                    mind knowing your loved one is in safe hands.
+                  </p>
+                </div>
+                <div class="service-benefits__slider-item service-benefits-slide swiper-slide">
+                  <h3 class="service-benefits-slide__title">Reliable Support for Daily Living</h3>
+                  <p class="service-benefits-slide__text">
+                    Daily tasks like housekeeping, meal prep, and errands may be too much for some seniors. Our reliable
+                    caregivers step in to manage these responsibilities to give seniors the freedom to enjoy their
+                    favorite pastimes and more precious time with family.
+                  </p>
+                </div>
+                <div class="service-benefits__slider-item service-benefits-slide swiper-slide">
+                  <h3 class="service-benefits-slide__title">Reliable Support for Daily Living</h3>
+                  <p class="service-benefits-slide__text">
+                    Daily tasks like housekeeping, meal prep, and errands may be too much for some seniors. Our reliable
+                    caregivers step in to manage these responsibilities to give seniors the freedom to enjoy their
+                    favorite pastimes and more precious time with family.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="service-benefits__footer">
+              <button
+                type="button"
+                aria-label="Previous slide"
+                class="service-benefits__navigation-button service-benefits__navigation-button--prev"
+              >
+                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20" viewBox="0 0 12 20" fill="none">
+                  <path
+                    stroke="currentColor"
+                    d="M10.068 1.851 1.956 10l8.112 8.149"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+              <div class="service-benefits__pagination pagination"></div>
+              <button
+                type="button"
+                aria-label="Next slide"
+                class="service-benefits__navigation-button service-benefits__navigation-button--next"
+              >
+                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="20" viewBox="0 0 12 20" fill="none">
+                  <path
+                    stroke="currentColor"
+                    d="M1.932 1.851 10.044 10 1.932 18.149"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
             </div>
           </div>
         </section>
