Оновлення секцій послуг: додано нову секцію з перевагами домашнього догляду, оновлено стилі для заголовків та тексту, а також інтегровано нові елементи для покращення візуального сприйняття контенту.

--- a/pages/service.html
+++ b/pages/service.html
@@ -55,9 +55,11 @@
 
         <section class="service-benefits">
           <div class="service-benefits__container">
-            <div class="service-benefits__header">
-              <h2 class="service-benefits__header-title">Benefits of Hiring Senior Care Services</h2>
-              <div class="service-benefits__header-text">
+            <div class="service-benefits__header section-header">
+              <h2 class="service-benefits__header-title section-header__title">
+                Benefits of Hiring Senior Care Services
+              </h2>
+              <div class="service-benefits__header-text section-header__text">
                 <p>
                   Hiring the right support for your loved one is a significant decision. At Caring With Integrity Home
                   Care, we want to create a positive impact through our solutions.
@@ -166,12 +168,12 @@
 
         <section class="tabs" data-js-tabs>
           <div class="tabs__container container-base">
-            <div class="tabs__header">
-              <h2 class="tabs__header-title">
+            <div class="tabs__header section-header">
+              <h2 class="tabs__header-title section-header__title">
                 Understanding How Our Caregivers Provide <br />
                 Reliable Elderly Care
               </h2>
-              <div class="tabs__header-text">
+              <div class="tabs__header-text section-header__text">
                 <p>
                   Reliable care means more than assistance to us; it's about understanding, empathy, and truly enriching
                   each day for our clients. Here's how our senior caregivers can make a big difference in the lives of
@@ -207,7 +209,7 @@
                     aria-selected="true"
                     tabindex="0"
                   >
-                  Transporting Clients to Social Activities and Doctor's Appointments
+                    Transporting Clients to Social Activities and Doctor's Appointments
                   </button>
                   <div class="tabs__buttons-container" id="tab-container-2"></div>
                 </div>
@@ -235,7 +237,14 @@
                     </div>
                   </div>
                 </div>
-                <div data-adaptive-dom="tab-container-2,1199.98,first" data-js-tabs-content class="tabs__panel" id="tabpanel-2" role="tabpanel" aria-labelledby="tab-2">
+                <div
+                  data-adaptive-dom="tab-container-2,1199.98,first"
+                  data-js-tabs-content
+                  class="tabs__panel"
+                  id="tabpanel-2"
+                  role="tabpanel"
+                  aria-labelledby="tab-2"
+                >
                   <img src="/images/service/t2.png" alt="" class="tabs__panel-image" />
                   <div class="tabs__panel-content">
                     <div class="tabs__panel-content-inner">
@@ -248,6 +257,72 @@
                     </div>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="grid">
+          <div class="grid__container container-base">
+            <div class="grid__header section-header">
+              <h2 class="grid__header-title section-header__title">Why Choose Our Home Care Agency?</h2>
+              <div class="grid__header-text section-header__text">
+                <p>
+                  Choosing a home care provider means trusting someone to treat your loved one with genuine warmth and
+                  respect. At Caring with Integrity Home Care, we do more than just provide basic support. We also offer
+                  personalized care rooted in empathy and understanding.
+                </p>
+                <p>Here’s why families across Philadelphia choose us for their home care needs:</p>
+              </div>
+            </div>
+            <div class="grid__items">
+              <div class="grid__item">
+                <h3 class="grid__item-title">Compassionate and Qualified Caregivers</h3>
+                <p class="grid__item-text">
+                  Our agency carefully selects senior caregivers based on their professional skills and genuine passion
+                  for helping others. Through background checks and ongoing training, we guarantee your loved one
+                  receives reliable, heartfelt, and expert care.
+                </p>
+              </div>
+              <div class="grid__item">
+                <h3 class="grid__item-title">Compassionate and Qualified Caregivers</h3>
+                <p class="grid__item-text">
+                  Our agency carefully selects senior caregivers based on their professional skills and genuine passion
+                  for helping others. Through background checks and ongoing training, we guarantee your loved one
+                  receives reliable, heartfelt, and expert care.
+                </p>
+              </div>
+              <div class="grid__item">
+                <h3 class="grid__item-title">Compassionate and Qualified Caregivers</h3>
+                <p class="grid__item-text">
+                  Our agency carefully selects senior caregivers based on their professional skills and genuine passion
+                  for helping others. Through background checks and ongoing training, we guarantee your loved one
+                  receives reliable, heartfelt, and expert care.
+                </p>
+              </div>
+              <div class="grid__item">
+                <h3 class="grid__item-title">Compassionate and Qualified Caregivers</h3>
+                <p class="grid__item-text">
+                  Our agency carefully selects senior caregivers based on their professional skills and genuine passion
+                  for helping others. Through background checks and ongoing training, we guarantee your loved one
+                  receives reliable, heartfelt, and expert care.
+                </p>
+              </div>
+              <div class="grid__item">
+                <h3 class="grid__item-title">Compassionate and Qualified Caregivers</h3>
+                <p class="grid__item-text">
+                  Our agency carefully selects senior caregivers based on their professional skills and genuine passion
+                  for helping others. Through background checks and ongoing training, we guarantee your loved one
+                  receives reliable, heartfelt, and expert care.
+                </p>
+              </div>
+              <div class="grid__item">
+                <h3 class="grid__item-title">Compassionate and Qualified Caregivers</h3>
+                <p class="grid__item-text">
+                  Our agency carefully selects senior caregivers based on their professional skills and genuine passion
+                  for helping others. Through background checks and ongoing training, we guarantee your loved one
+                  receives reliable, heartfelt, and expert care.
+                </p>
               </div>
             </div>
           </div>
