Оновлення стилів секції CTA: додано нові класи для відступів та адаптивності, змінено гнучкість елементів для покращення візуального сприйняття, а також оновлено стилі для тексту та контенту.

--- a/pages/service.html
+++ b/pages/service.html
@@ -32,12 +32,12 @@
           </div>
         </section>
 
-        <section class="cta">
+        <section class="cta section-pt">
           <div class="cta__container container-base">
             <div data-aos="fade-up" class="cta__image">
               <img src="/images/service/1.png" alt="#" />
             </div>
-            <div data-aos="fade-up" data-aos-delay="200" class="cta__content section-content">
+            <div data-aos="fade-up" data-aos-delay="200" class="cta__content cta__content--increase section-content">
               <p>
                 When these changes begin to affect a senior's well-being or independence, professional support can make
                 a meaningful difference.
